--- a/web-developer-homework.github.io/final_project/app/admin/conf.ini
+++ b/web-developer-homework.github.io/final_project/app/admin/conf.ini
@@ -1,53 +1,54 @@
-lang=en,ru
+lang = en,ru
 
-password=6fbde3e2135f10ee603ff6f59bc97d4b0a4d4e9a
+password = 501d304890c31c121150a74410c409b580332fbf
 
-session=
+session = c216c6d1a26a66d9574e1dc40c8c161e03fc971a
 
-pass_complexity=500000
+pass_complexity = 500000
 
-pass_complexity_js=15000
+pass_complexity_js = 14999
 
-auth_time=
+auth_time = 1594051609
 
-auth_error_time=
+auth_error_time = 
 
-auth_error_list=
+auth_error_list = 
 
-auth_error_limit=5
+auth_error_limit = 5
 
-auth_lockout_duration=1
+auth_lockout_duration = 1
 
-auth_session_reset=60
+auth_session_reset = 60
 
-auth_bot_filter=1
+auth_bot_filter = 1
 
-logout_to_site=0
+logout_to_site = 1
 
-site_scripts=1
+site_scripts = 1
 
-site_styles=1
+site_styles = 1
 
-code_redraw_delay=200
+code_redraw_delay = 200
 
-code_undo_limit=50
+code_undo_limit = 50
 
-code_highlighting=1
+code_highlighting = 1
 
-allowed_ext=
+allowed_ext = 
 
-visual_ext=html,htm,shtml,shtm,stm,php
+visual_ext = html,htm,shtml,shtm,stm,php
 
-editable_ext=html,htm,shtml,shtm,stm,php,css,js,xml,txt
+editable_ext = html,htm,shtml,shtm,stm,php,css,js,xml,txt
 
-default_file=index.html
+default_file = index.html
 
-folder_size=1
+folder_size = 1
 
-document_root=
+document_root = 
 
-update_final=1
+update_final = 1
 
-update_beta=0
+update_beta = 0
 
-cache=
+cache = a%3A20%3A%7Bs%3A19%3A%22%2Ffinal_project%2Fapp%2F%22%3Bi%3A7170550%3Bs%3A25%3A%22%2Ffinal_project%2Fapp%2Fadmin%2F%22%3Bi%3A124968%3Bs%3A23%3A%22%2Ffinal_project%2Fapp%2Fcss%2F%22%3Bi%3A531724%3Bs%3A25%3A%22%2Ffinal_project%2Fapp%2Ffonts%2F%22%3Bi%3A1034004%3Bs%3A23%3A%22%2Ffinal_project%2Fapp%2Fimg%2F%22%3Bi%3A5421037%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-1%2F%22%3Bi%3A2660182%3Bs%3A30%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-10%2F%22%3Bi%3A31844%3Bs%3A30%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-11%2F%22%3Bi%3A51722%3Bs%3A30%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-12%2F%22%3Bi%3A481047%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-2%2F%22%3Bi%3A162239%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-3%2F%22%3Bi%3A267291%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-4%2F%22%3Bi%3A388165%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-5%2F%22%3Bi%3A353573%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-6%2F%22%3Bi%3A111935%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-7%2F%22%3Bi%3A209021%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-8%2F%22%3Bi%3A464843%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-9%2F%22%3Bi%3A239175%3Bs%3A22%3A%22%2Ffinal_project%2Fapp%2Fjs%2F%22%3Bi%3A5058%3Bs%3A23%3A%22%2Ffinal_project%2Fapp%2Fphp%2F%22%3Bi%3A836%3Bs%3A24%3A%22%2Ffinal_project%2Fapp%2Fsass%2F%22%3Bi%3A18600%3B%7D
+
