--- a/web-developer-homework.github.io/final_project/app/admin/conf.ini
+++ b/web-developer-homework.github.io/final_project/app/admin/conf.ini
@@ -2,17 +2,17 @@ lang = en,ru
 
 password = 501d304890c31c121150a74410c409b580332fbf
 
-session = c216c6d1a26a66d9574e1dc40c8c161e03fc971a
+session = d291a4266421f74b1a85b943f5b7b1961d31aead
 
 pass_complexity = 500000
 
-pass_complexity_js = 14999
+pass_complexity_js = 14998
 
-auth_time = 1594051609
+auth_time = 1594363078
 
-auth_error_time = 
+auth_error_time = 1594363067
 
-auth_error_list = 
+auth_error_list = a%3A0%3A%7B%7D
 
 auth_error_limit = 5
 
@@ -50,5 +50,5 @@ update_final = 1
 
 update_beta = 0
 
-cache = a%3A20%3A%7Bs%3A19%3A%22%2Ffinal_project%2Fapp%2F%22%3Bi%3A7170550%3Bs%3A25%3A%22%2Ffinal_project%2Fapp%2Fadmin%2F%22%3Bi%3A124968%3Bs%3A23%3A%22%2Ffinal_project%2Fapp%2Fcss%2F%22%3Bi%3A531724%3Bs%3A25%3A%22%2Ffinal_project%2Fapp%2Ffonts%2F%22%3Bi%3A1034004%3Bs%3A23%3A%22%2Ffinal_project%2Fapp%2Fimg%2F%22%3Bi%3A5421037%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-1%2F%22%3Bi%3A2660182%3Bs%3A30%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-10%2F%22%3Bi%3A31844%3Bs%3A30%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-11%2F%22%3Bi%3A51722%3Bs%3A30%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-12%2F%22%3Bi%3A481047%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-2%2F%22%3Bi%3A162239%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-3%2F%22%3Bi%3A267291%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-4%2F%22%3Bi%3A388165%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-5%2F%22%3Bi%3A353573%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-6%2F%22%3Bi%3A111935%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-7%2F%22%3Bi%3A209021%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-8%2F%22%3Bi%3A464843%3Bs%3A29%3A%22%2Ffinal_project%2Fapp%2Fimg%2Fsec-9%2F%22%3Bi%3A239175%3Bs%3A22%3A%22%2Ffinal_project%2Fapp%2Fjs%2F%22%3Bi%3A5058%3Bs%3A23%3A%22%2Ffinal_project%2Fapp%2Fphp%2F%22%3Bi%3A836%3Bs%3A24%3A%22%2Ffinal_project%2Fapp%2Fsass%2F%22%3Bi%3A18600%3B%7D
+cache = 
 
